# A-tiny-Stereo-SLAM

./: CMakeLists.txt  MySLAM.txt  README.md  best.txt  debug.txt  evo.sh  run.sh  trajectory.txt
app/: stereo_kitti.cpp
config/: KITTI00-02.yaml  KITTI03.yaml  KITTI04-12.yaml  yuan.yaml
include/: Backend.h  Camera.h  Common.h  Frame.h  Frontend.h  KeyFrame.h  LoopClosing.h  Map.h  MapPoints.h  ORBExtractor.h  Optimizer.h  System.h  Viewer.h
src/: Backend.cpp  DeepLCD.cpp  Frame.cpp  Frontend.cpp  KeyFrame.cpp  LoopClosing.cpp  Map.cpp  ORBExtractor.cpp  Optimizer.cpp  System.cpp  Viewer.cpp
test/: CMakeLists.txt  RANSAC.cpp  test.cpp
